Fixed some spacing in smaller formats. Fixed the regenerate button which wasn't changing its display property at the correct time.

--- a/style.css
+++ b/style.css
@@ -12,8 +12,11 @@ body {
     text-align: center;
 }
 
-#password_text {
+.extra_spacing {
     margin-top: 3%;
+}
+
+#password_text {
     color: red;
 }
 
